# poc-rust-gtk3

./: Cargo.toml  Makefile  README.md  docker-compose.yml  schema.sql
src/: main.rs
