[package]
name = "poc-rust-gtk3"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
sqlx = { version = "0.2", features = ["mysql"] }
async-std = "1.5.0"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_44"]

[dependencies.gdk]
version = "0.12.0"

